--- a/env/.config/tmux-sessionizer/tmux-sessionizer.conf
+++ b/env/.config/tmux-sessionizer/tmux-sessionizer.conf
@@ -1,1 +1,1 @@
-TS_SEARCH_PATHS=(~/ ~/personal:1 ~/personal/projects:1 ~/work:1 ~/work/projects:1)
+TS_SEARCH_PATHS=(~/ ~/personal:1 ~/personal/projects:1 ~/work:1 ~/work/projects:1 ~/personal/dev/env/.config)
