--- a/env/.config/tmux/tmux.conf
+++ b/env/.config/tmux/tmux.conf
@@ -1,27 +1,40 @@
-set -g default-terminal "tmux-256color"
-set -s escape-time 0
+source-file ~/.config/tmux/tmux.reset.conf
+set-option -g default-terminal 'screen-256color'
+set-option -g terminal-overrides ',xterm-256color:RGB'
 
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-set-option -g terminal-overrides ",*:XT"
-set -g status-style 'bg=#333333 fg=#5eacd3'
-set -g base-index 1
+set -g prefix ^A
+set -g base-index 1              # start indexing windows at 1 instead of 0
+set -g detach-on-destroy off     # don't exit from tmux when closing a session
+set -g escape-time 0             # zero-out escape time delay
+set -g history-limit 1000000     # increase history size (from 2,000)
+set -g renumber-windows on       # renumber all windows when any window is closed
+set -g set-clipboard on          # use system clipboard
+set -g status-position top       # macOS / darwin style
+setw -g mode-keys vi
+set -g status-right-length 100
 
-set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
 
-# vim-like pane switching
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+run ~/.config/tmux/plugins/tmux/catppuccin.tmux
 
-bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/personal/dev/todo.md"
+set -g @catppuccin_date_time_text " %d-%m %H:%M"
 
-bind-key -r C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
-bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
-bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
+set -g status-left ""
+set -gF  status-right "#{@catppuccin_status_directory}"
+set -agF status-right"#{@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_date_time}"
+
+run '~/.tmux/plugins/tpm/tpm'
+
