--- a/env/.config/tmux/tmux.conf
+++ b/env/.config/tmux/tmux.conf
@@ -1,40 +1,50 @@
-source-file ~/.config/tmux/tmux.reset.conf
-set-option -g default-terminal 'screen-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+# Set true color
+set-option -sa terminal-overrides ",xterm*:Tc"
 
-set -g prefix ^A
-set -g base-index 1              # start indexing windows at 1 instead of 0
-set -g detach-on-destroy off     # don't exit from tmux when closing a session
-set -g escape-time 0             # zero-out escape time delay
-set -g history-limit 1000000     # increase history size (from 2,000)
-set -g renumber-windows on       # renumber all windows when any window is closed
-set -g set-clipboard on          # use system clipboard
-set -g status-position top       # macOS / darwin style
-setw -g mode-keys vi
-set -g status-right-length 100
+set -g mouse on
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux#v2.1.3'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
-set -g @resurrect-strategy-nvim 'session'
-set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+# Change prefix key
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
 
-run ~/.config/tmux/plugins/tmux/catppuccin.tmux
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
 
-set -g @catppuccin_date_time_text " %d-%m %H:%M"
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-set -g status-left ""
-set -gF  status-right "#{@catppuccin_status_directory}"
-set -agF status-right"#{@catppuccin_status_session}"
-set -agF status-right "#{E:@catppuccin_status_date_time}"
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
-run '~/.tmux/plugins/tpm/tpm'
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# PLUGINS
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "christoomey/vim-tmux-navigator"
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin "tmux-plugins/tmux-yank"
+
+# set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+run "~/.config/tmux/plugins/tpm/tpm"
 
