--- a/env/.config/tmux/tmux.conf
+++ b/env/.config/tmux/tmux.conf
@@ -42,6 +42,12 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind R source-file ~/.config/tmux/tmux.conf
+bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/personal/dev/todo.md"
+bind-key -r C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
+bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
+bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
